--- a/02-911 Calls Data Capstone Project - Solutions.ipynb
+++ b/02-911 Calls Data Capstone Project - Solutions.ipynb
@@ -1073,7 +1073,7 @@
    },
    "source": [
     "____\n",
-    "**Creating heatmaps with seaborn and our data. We'll first need to restructure the dataframe so that the columns become the Hours and the Index becomes the Day of the Week.**"
+    "**Creating heatmaps with seaborn and our data. I'll first need to restructure the dataframe so that the columns become the Hours and the Index becomes the Day of the Week.**"
    ]
   },
   {
